--- a/reach-brochure.html
+++ b/reach-brochure.html
@@ -32,12 +32,12 @@
 
 
 	<div id="page_process">
-		<div id="process_hero" >
+		<div id="process_hero">
 			<img src="img/reach_brochure/brochure_top.jpg" />
 		</div>
 		<header class="outer">
 			<div class="inner">
-				<a href="index.html">Back to Home</a>
+				<a  class="process_return_link_small" href="index.html">Back to Home</a>
 				<h1>REACH Brochure Revision</h1>
 				<br />
 				<h3>Requirements and Goals</h3>
@@ -57,19 +57,31 @@
 
 					<section class="process_section cf">
 						<div class="process_section_title">
-							<h2>Conceptualization</h2>
+							<h2>Concept Development</h2>
 						</div>
 
 						<div class="process_outer left cf">
 							<div class="process_inner">
 								<div class="process_header cf">
 									<div class="process_step">1</div>
-									<div class="process_title">Moodboard</div>
+									<div class="process_title">Compositional Sketch</div>
 								</div>
 								<div class="process_content cf">
 
-									<p>I sought inspiration from baseball and school-based cartoons.</p>
-									<img class="moodboard" src="img/reach_brochure/moodboard_720.jpg" />
+									<p>
+										I begin the design process by sketching general content layout and overarching movement.
+									</p>
+
+									<ul id="featured_photo_gallery" class="gallery cf">
+										<li data-src="img/reach_brochure/sketch/sketch.jpg"
+											data-sub-html="Rough Sketch">
+											<img src="img/reach_brochure/sketch/sketch_640.jpg" />
+										</li>
+										<li data-src="img/reach_brochure/sketch/sketch2.jpg"
+											data-sub-html="Developed Sketch">
+											<img src="img/reach_brochure/sketch/sketch2_640.jpg" />
+										</li>
+									</ul>
 
 								</div>
 							</div>
@@ -79,8 +91,8 @@
 						<div class="process_outer right cf">
 							<div class="process_inner ">
 								<div class="process_header cf">
-									<div class="process_step">1</div>
-									<div class="process_title">Compositional Sketch</div>
+									<div class="process_step">2</div>
+									<div class="process_title">Moodboard</div>
 								</div>
 								<div class="process_content cf">
 
@@ -98,21 +110,29 @@
 					<section class="process_section cf">
 
 						<div class="process_section_title">
-							<h2>Produce Assets</h2>
+							<h2>Asset Production</h2>
 						</div>
 
 						<div class="process_outer left cf">
 							<div class="process_inner">
 								<div class="process_header cf">
-									<div class="process_step">1</div>
+									<div class="process_step">3</div>
 									<div class="process_title">Custom Typography</div>
 								</div>
 								<div class="process_content cf">
 									<p>
-										I worked on creating a custom typographic asset for their brand. The design is inspired by baseball team typography.
+										I designed a custom typographic asset for their brand.
 									</p>
-									<img class="moodboard" src="img/reach_brochure/moodboard_720.jpg" />
-
+									<ul id="featured_photo_gallery" class="gallery cf">
+										<li data-src="img/reach_brochure/typography/type_sketch.jpg"
+											data-sub-html="REACH Counseling">
+											<img src="img/reach_brochure/typography/type_sketch_640.jpg" />
+										</li>
+										<li data-src="img/reach_brochure/typography/typography.jpg"
+											data-sub-html="REACH Awards Stage">
+											<img src="img/reach_brochure/typography/typography_640.jpg" />
+										</li>
+									</ul>
 								</div>
 							</div>
 						</div>
@@ -120,7 +140,7 @@
 						<div class="process_outer right cf">
 							<div class="process_inner">
 								<div class="process_header cf">
-									<div class="process_step">1</div>
+									<div class="process_step">4</div>
 									<div class="process_title">Photography</div>
 								</div>
 								<div class="process_content cf">
@@ -153,8 +173,82 @@
 					</section>
 
 
+					<section class="process_section cf">
 
-</div>
+						<div class="process_section_title">
+							<h2>Design Implementation</h2>
+						</div>
+
+						<div class="process_outer left cf">
+							<div class="process_inner">
+								<div class="process_header cf">
+									<div class="process_step">5</div>
+									<div class="process_title">Prototype</div>
+								</div>
+								<div class="process_content cf">
+									<p>
+										I create a rough for initial approval.
+									</p>
+									<ul id="featured_photo_gallery" class="gallery cf">
+										<li data-src="img/reach_brochure/typography/type_sketch.jpg"
+											data-sub-html="REACH Counseling">
+											<img src="img/reach_brochure/typography/type_sketch_640.jpg" />
+										</li>
+										<li data-src="img/reach_brochure/typography/typography.jpg"
+											data-sub-html="REACH Awards Stage">
+											<img src="img/reach_brochure/typography/typography_640.jpg" />
+										</li>
+									</ul>
+								</div>
+							</div>
+						</div>
+
+						<div class="process_outer right cf">
+							<div class="process_inner">
+								<div class="process_header cf">
+									<div class="process_step">6</div>
+									<div class="process_title">Refinement</div>
+								</div>
+								<div class="process_content cf">
+
+									<p>I took photos at various REACH events. The focus was to capture genuine, positive human interaction.</p>
+
+
+
+								</div>
+							</div>
+						</div>
+
+
+						<div class="process_outer final cf">
+							<div class="process_inner">
+								<div class="process_header cf">
+									<div class="process_step">7</div>
+									<div class="process_title">Final Product</div>
+								</div>
+								<div class="process_content cf">
+									<ul id="featured_photo_gallery" class="gallery cf">
+										<li data-src="img/reach_brochure/typography/type_sketch.jpg"
+											data-sub-html="REACH Counseling">
+											<img src="img/reach_brochure/typography/type_sketch_640.jpg" />
+										</li>
+										<li data-src="img/reach_brochure/typography/typography.jpg"
+											data-sub-html="REACH Awards Stage">
+											<img src="img/reach_brochure/typography/typography_640.jpg" />
+										</li>
+									</ul>
+								</div>
+							</div>
+						</div>
+
+					</section>
+
+					<div class="process_return_link_container">
+						<a class="process_return_link_large" href="index.html">Back to Home
+						</a>
+					</div>
+
+				</div>
 			</div>
 
 		</div>
