--- a/reach-brochure.html
+++ b/reach-brochure.html
@@ -33,11 +33,11 @@
 
 	<div id="page_process">
 		<div id="process_hero">
+			<a class="process_return_link_small" href="index.html">Back to Home</a>
 			<img src="img/reach_brochure/brochure_top.jpg" />
 		</div>
 		<header class="outer">
 			<div class="inner">
-				<a  class="process_return_link_small" href="index.html">Back to Home</a>
 				<h1>REACH Brochure Revision</h1>
 				<br />
 				<h3>Requirements and Goals</h3>
@@ -72,13 +72,13 @@
 										I begin the design process by sketching general content layout and overarching movement.
 									</p>
 
-									<ul id="featured_photo_gallery" class="gallery cf">
+									<ul id="process_sketch_gallery" class="gallery cf">
 										<li data-src="img/reach_brochure/sketch/sketch.jpg"
-											data-sub-html="Rough Sketch">
+											data-sub-html="Rough Compositional Sketch">
 											<img src="img/reach_brochure/sketch/sketch_640.jpg" />
 										</li>
 										<li data-src="img/reach_brochure/sketch/sketch2.jpg"
-											data-sub-html="Developed Sketch">
+											data-sub-html="Developed Compositional Sketch">
 											<img src="img/reach_brochure/sketch/sketch2_640.jpg" />
 										</li>
 									</ul>
@@ -121,15 +121,15 @@
 								</div>
 								<div class="process_content cf">
 									<p>
-										I designed a custom typographic asset for their brand.
+										I designed a custom typographic asset for the brochure and future use.
 									</p>
-									<ul id="featured_photo_gallery" class="gallery cf">
+									<ul id="process_type_gallery" class="gallery cf">
 										<li data-src="img/reach_brochure/typography/type_sketch.jpg"
-											data-sub-html="REACH Counseling">
+											data-sub-html="Custom Typography Sketch">
 											<img src="img/reach_brochure/typography/type_sketch_640.jpg" />
 										</li>
 										<li data-src="img/reach_brochure/typography/typography.jpg"
-											data-sub-html="REACH Awards Stage">
+											data-sub-html="Custom Typography Finished">
 											<img src="img/reach_brochure/typography/typography_640.jpg" />
 										</li>
 									</ul>
@@ -146,7 +146,7 @@
 								<div class="process_content cf">
 
 									<p>I took photos at various REACH events. The focus was to capture genuine, positive human interaction.</p>
-									<ul id="featured_photo_gallery" class="gallery cf">
+									<ul id="process_photo_gallery" class="gallery cf">
 										<li data-src="img/reach_brochure/photos/counsel.jpg"
 											data-sub-html="REACH Counseling">
 											<img src="img/reach_brochure/photos/counsel_640.jpg" />
@@ -187,16 +187,16 @@
 								</div>
 								<div class="process_content cf">
 									<p>
-										I create a rough for initial approval.
+										I created a rough draft for initial approval. 
 									</p>
-									<ul id="featured_photo_gallery" class="gallery cf">
-										<li data-src="img/reach_brochure/typography/type_sketch.jpg"
-											data-sub-html="REACH Counseling">
-											<img src="img/reach_brochure/typography/type_sketch_640.jpg" />
+									<ul id="process_prototype_gallery" class="gallery cf">
+										<li data-src="img/reach_brochure/prototype/rough_inside.jpg"
+											data-sub-html="REACH Brochure - Rough Inside">
+											<img src="img/reach_brochure/prototype/rough_inside_480.jpg" />
 										</li>
-										<li data-src="img/reach_brochure/typography/typography.jpg"
-											data-sub-html="REACH Awards Stage">
-											<img src="img/reach_brochure/typography/typography_640.jpg" />
+										<li data-src="img/reach_brochure/prototype/rough_outside.jpg"
+											data-sub-html="REACH Brochure - Rough Outside">
+											<img src="img/reach_brochure/prototype/rough_outside_480.jpg" />
 										</li>
 									</ul>
 								</div>
@@ -211,8 +211,22 @@
 								</div>
 								<div class="process_content cf">
 
-									<p>I took photos at various REACH events. The focus was to capture genuine, positive human interaction.</p>
-
+									<p>
+										After the roughs were approved, I moved began working and refining the final version.
+										<!--Upon discovering much of the organization's photos were of low resolution, I adapted the design inside of the brochure
+										to that of a collage. In the end, this was a better design choice as the initial design's wavy borders pulled away from
+										the effectiveness of the photos.-->
+									</p>
+									<ul id="process_refine_gallery" class="gallery cf">
+										<li data-src="img/reach_brochure/refine/refine_inside.jpg"
+											data-sub-html="REACH Brochure - Refine Inside">
+											<img src="img/reach_brochure/refine/refine_inside_480.jpg" />
+										</li>
+										<li data-src="img/reach_brochure/refine/refine_outside.jpg"
+											data-sub-html="REACH Brochure - Refine Outside">
+											<img src="img/reach_brochure/refine/refine_outside_480.jpg" />
+										</li>
+									</ul>
 
 
 								</div>
@@ -227,14 +241,14 @@
 									<div class="process_title">Final Product</div>
 								</div>
 								<div class="process_content cf">
-									<ul id="featured_photo_gallery" class="gallery cf">
-										<li data-src="img/reach_brochure/typography/type_sketch.jpg"
-											data-sub-html="REACH Counseling">
-											<img src="img/reach_brochure/typography/type_sketch_640.jpg" />
+									<ul id="process_final_gallery" class="gallery cf">
+										<li data-src="img/reach_brochure/final/final_inside.jpg"
+											data-sub-html="REACH Brochure - Final Inside">
+											<img src="img/reach_brochure/final/final_inside_640.jpg" />
 										</li>
-										<li data-src="img/reach_brochure/typography/typography.jpg"
-											data-sub-html="REACH Awards Stage">
-											<img src="img/reach_brochure/typography/typography_640.jpg" />
+										<li data-src="img/reach_brochure/final/final_outside.jpg"
+											data-sub-html="REACH Brochure - Final Outside">
+											<img src="img/reach_brochure/final/final_outside_640.jpg" />
 										</li>
 									</ul>
 								</div>
@@ -243,7 +257,7 @@
 
 					</section>
 
-					<div class="process_return_link_container">
+					<div class="process_return_link_large_container">
 						<a class="process_return_link_large" href="index.html">Back to Home
 						</a>
 					</div>
