inspiration and loading

--- a/index.html
+++ b/index.html
@@ -25,11 +25,10 @@
 <body>
 
 	<div id="preload_container">
+		<div id="preload_message">
+			LOADING
+		</div>
 	</div>
-
-	<div id="overlay_container">
-	</div>
-
 
 	<div id="page_container">
 
