--- a/reach-brochure.html
+++ b/reach-brochure.html
@@ -25,11 +25,10 @@
 <body>
 
 	<div id="preload_container">
+		<div id="preload_message">
+			LOADING
+		</div>
 	</div>
-
-	<div id="overlay_container">
-	</div>
-
 
 	<div id="page_process">
 		<div id="process_hero">
@@ -60,16 +59,40 @@
 							<h2>Concept Development</h2>
 						</div>
 
+
+
 						<div class="process_outer left cf">
-							<div class="process_inner">
+							<div class="process_inner ">
 								<div class="process_header cf">
 									<div class="process_step">1</div>
+									<div class="process_title">Inspiration</div>
+								</div>
+								<div class="process_content cf">
+									<p>
+										I sought inspiration from baseball and positive portrayals of schools in cartoons.
+										Clouds were a inspirational factor for their hopeful symbolism.
+									</p>
+									<ul id="process_sketch_gallery" class="gallery gallery-1 cf">
+										<li data-src="img/reach_brochure/inspiration/inspiration.jpg"
+											data-sub-html="Developed Compositional Sketch">
+											<img src="img/reach_brochure/inspiration/inspiration_640.jpg" />
+										</li>
+									</ul>
+								</div>
+							</div>
+						</div>
+
+						<div class="process_outer right cf">
+							<div class="process_inner">
+								<div class="process_header cf">
+									<div class="process_step">2</div>
 									<div class="process_title">Compositional Sketch</div>
 								</div>
 								<div class="process_content cf">
 
 									<p>
-										I begin the design process by sketching general content layout and overarching movement.
+										Influenced into establishing a mood of hopeful comfort,
+										I started sketching a general content layout and overarching movement.
 									</p>
 
 									<ul id="process_sketch_gallery" class="gallery cf">
@@ -87,21 +110,6 @@
 							</div>
 						</div>
 
-
-						<div class="process_outer right cf">
-							<div class="process_inner ">
-								<div class="process_header cf">
-									<div class="process_step">2</div>
-									<div class="process_title">Moodboard</div>
-								</div>
-								<div class="process_content cf">
-
-									<p>I sought inspiration from baseball and school-based cartoons.</p>
-									<img class="moodboard" src="img/reach_brochure/moodboard_720.jpg" />
-
-								</div>
-							</div>
-						</div>
 					</section>
 
 
@@ -122,6 +130,7 @@
 								<div class="process_content cf">
 									<p>
 										I designed a custom typographic asset for the brochure and future use.
+										The typography was inspired by the optimistic, youthful, established connotation of baseball team fonts.
 									</p>
 									<ul id="process_type_gallery" class="gallery cf">
 										<li data-src="img/reach_brochure/typography/type_sketch.jpg"
@@ -213,9 +222,8 @@
 
 									<p>
 										After the roughs were approved, I moved began working and refining the final version.
-										<!--Upon discovering much of the organization's photos were of low resolution, I adapted the design inside of the brochure
-										to that of a collage. In the end, this was a better design choice as the initial design's wavy borders pulled away from
-										the effectiveness of the photos.-->
+										The original inside-design was adapted into a collage format when many of the provided photos were of
+										low resolution.
 									</p>
 									<ul id="process_refine_gallery" class="gallery cf">
 										<li data-src="img/reach_brochure/refine/refine_inside.jpg"
