--- a/index.html
+++ b/index.html
@@ -30,11 +30,12 @@
 		</div>
 	</div>
 
-	<div id="page_container">
+	<div id="page_home">
 
 		<header class="outer">
 			<div class="inner">
-				RICHARD HUYNH - UNDER CONSTRUCTION
+
+	
 			</div>
 		</header>
 
@@ -67,22 +68,40 @@
 					</div>
 				</div>
 				<ul id="work_gallery" class="gallery gallery-4 cf">
-					<li data-src="img/gallery/fyaw_full.jpg"
-						data-sub-html="REACH Foster Youth Awareness Week Flyer">
-						<img src="img/gallery/fyaw_640.jpg" />
+					<li data-src="img/gallery/omn_full.jpg"
+						data-sub-html="REACH - Open Mic Night Flyer">
+						<img src="img/gallery/omn_480.jpg" />
 					</li>
+
 					<li data-src="img/gallery/topdosh_full.jpg"
 						data-sub-html="Conceptual Streetwear Style Guide Brochure">
-						<img src="img/gallery/topdosh_640.jpg" />
+						<img src="img/gallery/topdosh_480.jpg" />
+					</li>
+
+					<li data-src="img/gallery/fyaw_full.jpg"
+						data-sub-html="REACH Foster Youth Awareness Week Flyer">
+						<img src="img/gallery/fyaw_480.jpg" />
 					</li>
 					<li data-src="img/gallery/dino_full.jpg"
 						data-sub-html="Illustrated Dinosaur Poster">
-						<img src="img/gallery/dino_640.jpg" />
+						<img src="img/gallery/dino_480.jpg" />
 					</li>
+
 					<li data-src="img/gallery/twin_full.jpg"
 						data-sub-html="REACH - Illustrated 2-piece Flyer Set">
-						<img src="img/gallery/twin_640.jpg" />
+						<img src="img/gallery/twin_480.jpg" />
 					</li>
+
+					<li data-src="img/gallery/water_full.jpg"
+						data-sub-html="REACH - Illustrated 2-piece Flyer Set">
+						<img src="img/gallery/water_480.jpg" />
+					</li>
+
+					<li data-src="img/gallery/water_full.jpg"
+						data-sub-html="REACH - Illustrated 2-piece Flyer Set">
+						<img src="img/gallery/pin_480.jpg" />
+					</li>
+
 				</ul>
 
 
