--- a/index.html
+++ b/index.html
@@ -97,8 +97,8 @@
 						<img src="img/gallery/water_480.jpg" />
 					</li>
 
-					<li data-src="img/gallery/water_full.jpg"
-						data-sub-html="REACH - Illustrated 2-piece Flyer Set">
+					<li data-src="img/gallery/pin_full.jpg"
+						data-sub-html="Pachuca - Squid Pop Pin">
 						<img src="img/gallery/pin_480.jpg" />
 					</li>
 
