--- a/reach-brochure.html
+++ b/reach-brochure.html
@@ -72,7 +72,7 @@
 										I sought inspiration from baseball and positive portrayals of schools in cartoons.
 										Clouds were a inspirational factor for their hopeful symbolism.
 									</p>
-									<ul id="process_sketch_gallery" class="gallery gallery-1 cf">
+									<ul id="process_inspiration_gallery" class="gallery gallery-1 cf">
 										<li data-src="img/reach_brochure/inspiration/inspiration.jpg"
 											data-sub-html="Developed Compositional Sketch">
 											<img src="img/reach_brochure/inspiration/inspiration_640.jpg" />
