--- a/reach-brochure.html
+++ b/reach-brochure.html
@@ -30,9 +30,30 @@
 		</div>
 	</div>
 
+
+	<div id="top_nav_container">
+		<header class="outer">
+			<div class="inner">
+				<div class="title_container">
+					<a href="index.html">
+						<svg id="rh_logo" data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 360 576">
+							<title>rh logo</title>
+							<path class="cls-1" d="M0,0V576H360V0ZM108,540H36V36h72V72l36-36h72V225l-72,72V108l-36,36Zm216,0H252V504l-36,36H144V351l72-72V468l36-36V36h72Z" />
+						</svg>
+						<h1>
+							RICH HUYNH<span class="title-2">DESIGN PORTFOLIO</span>
+						</h1>
+					</a>
+				</div>
+
+			</div>
+		</header>
+	</div>
+
 	<div id="page_process">
+
+
 		<div id="process_hero">
-			<a class="process_return_link_small" href="index.html">Back to Home</a>
 			<img src="img/reach_brochure/brochure_top.jpg" />
 		</div>
 		<header class="outer">
@@ -281,7 +302,7 @@
 		<div class="inner">
 			<div class="section_header_container cf">
 				<div class="section_header_left">
-					<a class="title" href="index.html"><b>Richard Huynh</b></a>
+					<a class="title" href="index.html"><b>RICH HUYNH</b></a>
 				</div>
 				<div class="section_header_right">
 					<nav class="nav-social cf">
