big site-wide style change

--- a/index.html
+++ b/index.html
@@ -30,90 +30,97 @@
 		</div>
 	</div>
 
-	<div id="page_home">
+	<header class="outer">
+		<div class="inner">
+			<div class="title_container">
+				<a href="index.html">
+					<svg id="rh_logo" data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 360 576">
+						<title>rh logo</title>
+						<path class="cls-1" d="M0,0V576H360V0ZM108,540H36V36h72V72l36-36h72V225l-72,72V108l-36,36Zm216,0H252V504l-36,36H144V351l72-72V468l36-36V36h72Z" />
+					</svg>
+					<h1>
+						RICH HUYNH<span class="title-2">DESIGN PORTFOLIO</span>
+					</h1>
+				</a>
+			</div>
 
-		<div id="top_nav_container">
-			<header class="outer">
-				<div class="inner">
-					<div class="title_container">
-						<a href="index.html">
-							<svg id="rh_logo" data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 360 576">
-								<title>rh logo</title>
-								<path class="cls-1" d="M0,0V576H360V0ZM108,540H36V36h72V72l36-36h72V225l-72,72V108l-36,36Zm216,0H252V504l-36,36H144V351l72-72V468l36-36V36h72Z" />
-							</svg>
-							<h1>
-								RICH HUYNH<span class="title-2">DESIGN PORTFOLIO</span>
-							</h1>
-						</a>
-					</div>
-
-				</div>
-			</header>
 		</div>
+	</header>
 
-
+	<div id="page_home">
 		<section id="featured" class="outer">
 			<div class="inner">
+				<hr />
 				<div class="section_header_container cf">
-					<div class="section_header_left">
-						<b>Featured Work</b><br/>
-						<a class="featured_link" href="reach-brochure.html">See Process</a>
-					</div>
-					<div class="section_header_right">
-						<b>REACH</b><br />
-						Brochure + Sign
-					</div>
+					<h2>FEATURED</h2>
 				</div>
-				<div class="featured_image">
-					<img src="img/reach_brochure/preview.jpg" />
-				</div>
+				<a class="featured_container" href="reach-brochure.html">
+					<img src="img/reach_brochure/brochure_preview.jpg" />
+					<div class="featured-info">
+						SEE PROCESS
+					</div>
+				</a>
 			</div>
 		</section>
 
 		<section id="work" class="outer">
 			<div class="inner">
+				<hr />
 				<div class="section_header_container cf">
-					<div class="section_header_left">
-						<b>Work</b>
-					</div>
-					<div class="section_header_right">
-						<b>Assorted</b>
-					</div>
+					<h2>WORK</h2>
 				</div>
 				<ul id="work_gallery" class="gallery gallery-4 cf">
 					<li data-src="img/gallery/omn_full.jpg"
 						data-sub-html="REACH - Open Mic Night Flyer">
-						<img src="img/gallery/omn_480.jpg" />
+						<img src="img/gallery/640/omn_640.jpg" />
+						<div class="gallery-title-container">
+							<div class="gallery-title">Open Mic Night Flyer</div>
+						</div>
 					</li>
 
 					<li data-src="img/gallery/topdosh_full.jpg"
 						data-sub-html="Conceptual Streetwear Style Guide Brochure">
-						<img src="img/gallery/topdosh_480.jpg" />
+						<img src="img/gallery/640/topdosh_640.jpg" />
+						<div class="gallery-title-container">
+							<div class="gallery-title">Conceptual Streetwear Style Guide Brochure</div>
+						</div>
 					</li>
 
 					<li data-src="img/gallery/fyaw_full.jpg"
 						data-sub-html="REACH Foster Youth Awareness Week Flyer">
-						<img src="img/gallery/fyaw_480.jpg" />
+						<img src="img/gallery/640/fyaw_640.jpg" />
+						<div class="gallery-title-container">
+							<div class="gallery-title">Foster Youth Awareness Week Flyer</div>
+						</div>
 					</li>
 					<li data-src="img/gallery/dino_full.jpg"
 						data-sub-html="Illustrated Dinosaur Poster">
-						<img src="img/gallery/dino_480.jpg" />
+						<img src="img/gallery/640/dino_640.jpg" />
+						<div class="gallery-title-container">
+							<div class="gallery-title">Illustrated Dinosaur Poster</div>
+						</div>
 					</li>
 
 					<li data-src="img/gallery/twin_full.jpg"
 						data-sub-html="REACH - Illustrated 2-piece Flyer Set">
-						<img src="img/gallery/twin_480.jpg" />
+						<img src="img/gallery/640/twin_640.jpg" />
+						<div class="gallery-title-container">
+							<div class="gallery-title">Illustrated 2-piece Flyer Set</div>
+						</div>
 					</li>
 
 					<li data-src="img/gallery/water_full.jpg"
-						data-sub-html="REACH - Illustrated 2-piece Flyer Set">
-						<img src="img/gallery/water_480.jpg" />
+						data-sub-html="Environmental T-shirt Design">
+						<img src="img/gallery/640/water_640.jpg" />
+						<div class="gallery-title-container">
+							<div class="gallery-title">Environmental T-shirt Design</div>
+						</div>
 					</li>
 
-					<li data-src="img/gallery/pin_full.jpg"
+					<!--<li data-src="img/gallery/pin_full.jpg"
 						data-sub-html="Pachuca - Squid Pop Pin">
-						<img src="img/gallery/pin_480.jpg" />
-					</li>
+						<img src="img/gallery/640/pin_640.jpg" />
+					</li>-->
 
 				</ul>
 
@@ -125,11 +132,11 @@
 
 	<footer class="outer">
 		<div class="inner">
-			<div class="section_header_container cf">
-				<div class="section_header_left">
+			<div class="footer_container cf">
+				<div class="footer_left">
 					<a class="title" href="index.html"><b>RICH HUYNH</b></a>
 				</div>
-				<div class="section_header_right">
+				<div class="footer_right">
 					<nav class="nav-social cf">
 						<a href="https://www.linkedin.com/in/richhuynh">
 							<i class="fa fa-linkedin-square fa-2x" aria-hidden="true"></i>
