--- a/reach-brochure.html
+++ b/reach-brochure.html
@@ -31,24 +31,23 @@
 	</div>
 
 
-	<div id="top_nav_container">
-		<header class="outer">
-			<div class="inner">
-				<div class="title_container">
-					<a href="index.html">
-						<svg id="rh_logo" data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 360 576">
-							<title>rh logo</title>
-							<path class="cls-1" d="M0,0V576H360V0ZM108,540H36V36h72V72l36-36h72V225l-72,72V108l-36,36Zm216,0H252V504l-36,36H144V351l72-72V468l36-36V36h72Z" />
-						</svg>
-						<h1>
-							RICH HUYNH<span class="title-2">DESIGN PORTFOLIO</span>
-						</h1>
-					</a>
-				</div>
-
+	<header class="outer">
+		<div class="inner">
+			<div class="title_container">
+				<a href="index.html">
+					<svg id="rh_logo" data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 360 576">
+						<title>rh logo</title>
+						<path class="cls-1" d="M0,0V576H360V0ZM108,540H36V36h72V72l36-36h72V225l-72,72V108l-36,36Zm216,0H252V504l-36,36H144V351l72-72V468l36-36V36h72Z" />
+					</svg>
+					<h1>
+						RICH HUYNH<span class="title-2">DESIGN PORTFOLIO</span>
+					</h1>
+				</a>
 			</div>
-		</header>
-	</div>
+
+		</div>
+	</header>
+
 
 	<div id="page_process">
 
@@ -56,7 +55,7 @@
 		<div id="process_hero">
 			<img src="img/reach_brochure/brochure_top.jpg" />
 		</div>
-		<header class="outer">
+		<section id="process_head" class="outer">
 			<div class="inner">
 				<h1>REACH Brochure Revision</h1>
 				<br />
@@ -69,7 +68,7 @@
 					<li>Include lots of photos.</li>
 				</ul>
 			</div>
-		</header>
+		</section>
 
 		<div id="process_main">
 			<div class="outer cf">
@@ -300,11 +299,11 @@
 
 	<footer class="outer">
 		<div class="inner">
-			<div class="section_header_container cf">
-				<div class="section_header_left">
+			<div class="footer_container cf">
+				<div class="footer_left">
 					<a class="title" href="index.html"><b>RICH HUYNH</b></a>
 				</div>
-				<div class="section_header_right">
+				<div class="footer_right">
 					<nav class="nav-social cf">
 						<a href="https://www.linkedin.com/in/richhuynh">
 							<i class="fa fa-linkedin-square fa-2x" aria-hidden="true"></i>
