Add finlit project

--- a/index.html
+++ b/index.html
@@ -117,10 +117,13 @@
 						</div>
 					</li>
 
-					<!--<li data-src="img/gallery/pin_full.jpg"
-						data-sub-html="Pachuca - Squid Pop Pin">
-						<img src="img/gallery/640/pin_640.jpg" />
-					</li>-->
+					<li data-src="img/gallery/finlit_full.jpg"
+						data-sub-html="Financial Literacy Event Flyer">
+						<img src="img/gallery/640/finlit_640.jpg" />
+						<div class="gallery-title-container">
+							<div class="gallery-title">Financial Literacy Event Flyer</div>
+						</div>
+					</li>
 
 				</ul>
 
