--- a/reach-brochure.html
+++ b/reach-brochure.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<meta name="description" content="Richard Huynh: Designer/Developer">
-	<meta content='user-scalable=0' name='viewport' />
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Richard Huynh</title>
 
 	<!--Vendor-->
