--- a/index.html
+++ b/index.html
@@ -117,6 +117,14 @@
 						</div>
 					</li>
 
+					<li data-src="img/gallery/tacoready_full.jpg"
+						data-sub-html="Family Restuarant Menu">
+						<img src="img/gallery/640/tacoready_640.jpg" />
+						<div class="gallery-title-container">
+							<div class="gallery-title">Family Restuarant Menu</div>
+						</div>
+					</li>
+
 					<li data-src="img/gallery/finlit_full.jpg"
 						data-sub-html="Financial Literacy Event Flyer">
 						<img src="img/gallery/640/finlit_640.jpg" />
@@ -124,6 +132,8 @@
 							<div class="gallery-title">Financial Literacy Event Flyer</div>
 						</div>
 					</li>
+
+
 
 				</ul>
 
