added expungement flyer

--- a/index.html
+++ b/index.html
@@ -133,7 +133,13 @@
 						</div>
 					</li>
 
-
+					<li data-src="img/gallery/expunge_full.jpg"
+						data-sub-html="Expungement Clinic Flyer">
+						<img src="img/gallery/640/expunge_640.jpg" />
+						<div class="gallery-title-container">
+							<div class="gallery-title">Expungement Clinic Flyer</div>
+						</div>
+					</li>
 
 				</ul>
 
