--- a/work.html
+++ b/work.html
@@ -69,7 +69,7 @@
 					</div>
 				</div>
 
-				<div class="clearfix inner-image">
+				<div class="clearfix inner-image" style="padding-bottom:0;">
 					<div style="width:49%; float:left;">
 						<a class="lg-item" data-src="img/work/reach_brand/in-1600.jpg">
 							<img src="img/work/reach_brand/in-640.jpg" />
