Add Title and meta

--- a/index.html
+++ b/index.html
@@ -2,12 +2,19 @@
 <html>
 	<head>
 		<meta charset="UTF-8">
+		<meta name="description" content="Rich Huynh - Designer + Developer">
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">
+		<title>Rich Huynh - Designer + Developer</title>
+
 
 		<!--LightGallery-->
 		<link href="css/vendor/font-awesome.css" rel="stylesheet" />
 		<link href="css/vendor/lightgallery.css" rel="stylesheet" />
 		<link href="css/vendor/lg-fb-comment-box.css" rel="stylesheet" />
 		<link href="css/vendor/lg-transitions.css" rel="stylesheet" />
+
+
+
 
 		<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;600&display=swap" rel="stylesheet">
 		<link type="text/css" rel="stylesheet" href="css/style.css" />
