--- a/index.html
+++ b/index.html
@@ -43,6 +43,16 @@
 					<button class="gallery-button" onclick="richOverlay.open(0);">
 						<div class="label-overlay">
 							<div class="label">
+								<h1>Fan Day</h1>
+								<h2>Marketing Materials</h2>
+							</div>
+						</div>
+						<img src="img/gallery/msi-fanday.jpg" />
+					</button>
+
+					<button class="gallery-button" onclick="richOverlay.open(1);">
+						<div class="label-overlay">
+							<div class="label">
 								<h1>Smash the Competition</h1>
 								<h2>Poster</h2>
 							</div>
@@ -51,7 +61,7 @@
 					</button>
 
 
-					<button class="gallery-button" onclick="richOverlay.open(1);">
+					<button class="gallery-button" onclick="richOverlay.open(2);">
 						<div class="label-overlay">
 							<div class="label">
 								<h1>REACH</h1>
@@ -62,7 +72,7 @@
 					</button>
 
 
-					<button class="gallery-button" onclick="richOverlay.open(2);">
+					<button class="gallery-button" onclick="richOverlay.open(3);">
 						<div class="label-overlay">
 							<div class="label">
 								<h1>Eon</h1>
@@ -71,7 +81,7 @@
 						</div>
 						<img src="img/gallery/dino-poster.jpg" />
 					</button>
-					<button class="gallery-button" onclick="richOverlay.open(3);">
+					<button class="gallery-button" onclick="richOverlay.open(4);">
 						<div class="label-overlay">
 							<div class="label">
 								<h1>REACH</h1>
@@ -80,7 +90,7 @@
 						</div>
 						<img src="img/gallery/reach-flyers.jpg" />
 					</button>
-					<button class="gallery-button" onclick="richOverlay.open(4);">
+					<button class="gallery-button" onclick="richOverlay.open(5);">
 						<div class="label-overlay">
 							<div class="label">
 								<h1>Water</h1>
