--- a/work.html
+++ b/work.html
@@ -2,7 +2,55 @@
 
 	<div class="rich-overlay-content">
 
+		<div class="content-inner">
+			<div class="light-gallery">
 
+				<a class="lg-item" style="width:100%;" data-src="img/work/msi_fanday/top-1600.jpg">
+					<img src="img/work/msi_fanday/top-1280.jpg" />
+				</a>
+				<div class="content-info-outer">
+					<div class="content-info">
+						<h1>MSI Fan Day</h1>
+						<h2>Graphic Design, Digital Illustration - MSI</h2>
+						<p>
+							I was tasked with designing a set of event marketing materials for MSI Fan Day in partnership with NEX Navy Exchange.
+							I digitally illustrated a comic-inspired battleship and applied it to a flyer, social media post, and eblast.
+						</p>
+					</div>
+				</div>
+				<div class="inner-image">
+					<a class="lg-item white-border" style="width:100%; max-width:960px;" data-src="img/work/msi_fanday/flyer-1280.jpg">
+						<img src="img/work/msi_fanday/flyer-960.jpg" />
+					</a>
+				</div>
+
+				<div class="inner-image">
+					<a class="lg-item white-border" style="width:100%; max-width:960px;" data-src="img/work/msi_fanday/social-1080.jpg">
+						<img src="img/work/msi_fanday/social-960.jpg" />
+					</a>
+				</div>
+
+				<div class="inner-image">
+					<a class="lg-item white-border" style="width:100%; max-width:960px;" data-src="img/work/msi_fanday/eblast-960.jpg">
+						<img src="img/work/msi_fanday/eblast-960.jpg" />
+					</a>
+				</div>
+
+			</div>
+		</div>
+		<div class="content-footer-outer">
+			<div class="content-footer">
+				<p class="note">
+					MSI gaming dragon shield logo, laptops photos, and laptop model name logos are trademarks of MSI.
+					NEX Navy Exchange logo is a trademark of United States Navy under the Navy Exchange Service Command.
+				</p>
+			</div>
+		</div>
+	</div>
+
+
+
+	<div class="rich-overlay-content">
 		<div class="content-inner">
 			<div class="light-gallery">
 
@@ -50,9 +98,8 @@
 		</div>
 	</div>
 
+
 	<div class="rich-overlay-content">
-
-
 		<div class="content-inner">
 			<div class="light-gallery">
 				<a class="lg-item" style="width:100%;" data-src="img/work/reach_brand/mock-1600.jpg">
